--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 @import url('https://fonts.googleapis.com/css?family=Varela+Round&display=swap');
 
 body {
@@ -6,16 +8,28 @@ body {
 
 .background {
     z-index: 100;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 #app {
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     width: 100%;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
 }
 
@@ -31,14 +45,19 @@ body {
 #titre {
     z-index: 10;
     font-size: 4rem;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
     font-weight: 800;
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
         0px 8px 13px rgba(0, 0, 0, 0.1),
@@ -48,12 +67,16 @@ body {
 
 .message-intro {
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-line-pack: center;
     align-content: center;
     text-align: center;
     max-width: 90vw;
@@ -66,12 +89,14 @@ body {
 
 .grid {
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     height: auto;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
 }
 
@@ -84,7 +109,10 @@ body {
     padding: 2%;
     border-radius: 50px;
     margin: 2%;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
         0px 8px 13px rgba(0, 0, 0, 0.1),
@@ -98,12 +126,16 @@ body {
 #question {
     color: rgb(57, 231, 173) !important;
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-line-pack: center;
     align-content: center;
     text-align: center;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
@@ -113,6 +145,8 @@ body {
 
 p {
     padding: 3%;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
 }
 
@@ -120,6 +154,8 @@ p {
     color: rgb(180, 191, 201);
     text-align: center;
     font-size: 2rem;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
     font-family: 'Varela Round', sans-serif;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
@@ -131,20 +167,29 @@ p {
     font-family: 'Varela Round', sans-serif;
     font-size: 2rem;
     color: #5A6772;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
 }
 
 .buttons {
     margin-top: 30px;
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-line-pack: center;
     align-content: center;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
     font-family: 'Varela Round', sans-serif;
 }
@@ -159,22 +204,29 @@ p {
     border-radius: 50px;
     margin: 2%;
     padding: 3%;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
     opacity: 0;
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
         0px 8px 13px rgba(0, 0, 0, 0.1),
         0px 18px 23px rgba(0, 0, 0, 0.1);
-
+    font-family: 'Varela Round', sans-serif;
 }
 
 .choix>span {
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
 }
 
 .choix:hover {
     cursor: pointer;
     background-color: #790d94;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
     transform: scale(1.2);
 }
 
@@ -185,6 +237,8 @@ p {
 #progress {
     color: rgb(57, 231, 173);
     font-size: 2rem;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
     font-family: 'Varela Round', sans-serif;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
@@ -195,10 +249,10 @@ p {
 
 .highScore {
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     color: rgb(196, 170, 28);
     font-family: 'Varela Round', sans-serif;
@@ -210,16 +264,23 @@ p {
 
 #boutonFin {
     margin-top: 30px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-line-pack: center;
     align-content: center;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
     font-family: 'Varela Round', sans-serif;
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
     background-color: #af1756;
     width: 80%;
@@ -232,6 +293,7 @@ p {
     padding: 3%;
     transition: all 1s;
     margin: 0 auto;
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
         0px 8px 13px rgba(0, 0, 0, 0.1),
@@ -241,15 +303,17 @@ p {
 #boutonFin:hover {
     cursor: pointer;
     background-color: #0d9436;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
     transform: scale(1.2);
 }
 
 #temps {
     display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     color: rgb(219, 32, 94);
     font-family: 'Varela Round', sans-serif;
@@ -261,7 +325,12 @@ p {
 /******MEDIA QUERY ÉCRAN LARGE */
 @media screen and (min-width: 700px) {
     .buttons {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
     }
 
